# ADS_P1_2_Binaerbaum

./: CMakeLists.txt  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  main.cpp
